using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


public class AnimationParameters
{
    public const string Trigger_TakeHit1 = "TakeHit1";
    public const string Trigger_Attack1 = "Attack1";
    public const string Trigger_Idle = "Idle";
    public const string Trigger_Kick1 = "Kick1";
    public const string Trigger_ShootRecoil1 = "ShootRecoil1";
    public const string Trigger_BlockHit = "BlockHit";
    public const string Param_Block1 = "Block1";
}
